--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cotton Disease</title>
-</head>
-<link rel="stylesheet" href="style.css">
-<body>
-    <!-- <header>
-        <div class="clcuv">CLCUV</div>
-        <nav><ul>
-            <li>OUR WORK</li>
-            <li>OUR IMPACT</li>
-            <li>ABOUT MAP</li>
-            <li>OUR TEAM</li>
-            <li>NEWS</li>
-            <li>DATA</li>
-        </ul></nav>
-    </header> -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>India CLCUV Disease Atlas - Agricultural Research Platform</title>
+    <meta name="description" content="Comprehensive CLCUV disease data and analysis platform for India supporting agricultural resilience through evidence-based research insights." />
+    <meta name="author" content="India CLCUV Research Project" />
 
-    <main>
-        <div class="container"><div class="box">Lund Lele</div></div>
-    </main>
-</body>
+    <meta property="og:title" content="India CLCUV Disease Atlas - Agricultural Research Platform" />
+    <meta property="og:description" content="Comprehensive CLCUV disease data and analysis platform for India supporting agricultural resilience through evidence-based research insights." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
